--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,14 @@ icecream = "^2.1.3"
 #[tool.poetry.group.docs]
 #optional = true
 
-#[tool.poetry.group.docs.dependencies]
-#mkdocs = "*"
-
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.3"
+mkdocs-material = "^9.5.9"
+pymdown-extensions = "^10.7"
+mdx-gh-links = "^0.4"
+mkdocs-simple-hooks = "^0.1.5"
+mkdocs-version-annotations = "^1.0.0"
+mkdocs-include-markdown-plugin = "^6.0.4"
 
 [tool.poe.tasks]
 test = "pytest"
