--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "hyperpony"
-version = "0.50.0"
+version = "0.50.1"
 description = "Django library for building web applications with htmx"
 authors = ["Roman Roelofsen <romanroe@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/romanroe/dfv"
+repository = "https://github.com/romanroe/hyperpony"
 keywords = ["django", "python"]
 include = ["hyperpony"]
 
@@ -17,7 +17,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "~3.10.0"
+python = "^3.10.0"
 django = ">=4,<6"
 django-htmx = "^1.14.0"
 lxml = "^5.1.0"
