--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hyperpony"
-version = "0.60.1"
+version = "0.60.2"
 description = "Django library for building web applications with htmx"
 authors = ["Roman Roelofsen <romanroe@gmail.com>"]
 license = "MIT"
@@ -63,6 +63,7 @@ format = "ruff format ."
 mypy = "mypy ."
 check = ["format", "test", "mypy", "lint"]
 docswatch = "mkdocs serve"
+publish = "poetry publish --build"
 
 [tool.poe.tasks.check_watch]
 cwd = "."
