--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hyperpony"
-version = "0.61.3"
+version = "0.70.4"
 description = "Django library for building web applications with htmx"
 authors = ["Roman Roelofsen <romanroe@gmail.com>"]
 license = "MIT"
@@ -17,7 +17,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.10.0"
+python = "^3.12.0"
 django = ">=4,<6"
 django-htmx = "^1.14.0"
 lxml = "^5.1.0"
@@ -41,9 +41,8 @@ pytest-django = "^4.9.0"
 pytest-xdist = "^3.6.1"
 icecream = "^2.1.3"
 watchfiles = "^0.24.0"
+htpy = "^24.12.0"
 
-#[tool.poetry.group.docs]
-#optional = true
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
@@ -60,16 +59,17 @@ lint = "ruff check ."
 format = "ruff format ."
 mypy = "mypy ."
 check = ["format", "test", "mypy", "lint"]
+devcheck = ["test", "mypy", "lint"]
 docswatch = "mkdocs serve"
 publish_upload = "poetry publish --build"
 publish = ["check", "publish_upload"]
 
-[tool.poe.tasks.check_watch]
+[tool.poe.tasks.devcheckwatch]
 cwd = "."
-shell = 'watchfiles "poe check" .'
+shell = 'watchfiles "poe devcheck" .'
 
 [tool.ruff]
-line-length = 88
+line-length = 100
 indent-width = 4
 exclude = [
     "**/migrations/*",
